// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`EServiceDetails > should match the snapshot (consumer) 1`] = `
<body>
  <div>
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-mhc70k-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-7 css-uqwprf-MuiGrid-root"
      >
        <section
          class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-u52cu0-MuiPaper-root"
        >
          <div
            class="MuiStack-root css-jfdv4h-MuiStack-root"
          >
            <div
              class="MuiStack-root css-3y1137-MuiStack-root"
            >
              <h2
                class="MuiTypography-root MuiTypography-overline css-b3fch5-MuiTypography-root"
              >
                title
              </h2>
            </div>
          </div>
          <div
            class="MuiBox-root css-1yuhvjn"
          >
            <div
              class="MuiStack-root css-1sazv7p-MuiStack-root"
            >
              <div
                class="MuiStack-root css-1xcvc1q-MuiStack-root"
              >
                <div
                  class="MuiBox-root css-iuqs4u"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body2 css-e784if-MuiTypography-root"
                  >
                    technology
                  </p>
                </div>
                <div
                  class="MuiBox-root css-1rr4qq7"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body2 css-hoiwr4-MuiTypography-root"
                  >
                    REST
                  </p>
                </div>
              </div>
            </div>
          </div>
        </section>
        <section
          class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-u52cu0-MuiPaper-root"
        >
          <div
            class="MuiStack-root css-jfdv4h-MuiStack-root"
          >
            <div
              class="MuiStack-root css-3y1137-MuiStack-root"
            >
              <h2
                class="MuiTypography-root MuiTypography-overline css-b3fch5-MuiTypography-root"
              >
                title
              </h2>
            </div>
          </div>
          <div
            class="MuiBox-root css-1yuhvjn"
          >
            <div
              class="MuiStack-root css-1sazv7p-MuiStack-root"
            >
              <div
                class="MuiStack-root css-1xcvc1q-MuiStack-root"
              >
                <div
                  class="MuiBox-root css-iuqs4u"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body2 css-e784if-MuiTypography-root"
                  >
                    actualVersion
                  </p>
                </div>
                <div
                  class="MuiBox-root css-1rr4qq7"
                >
                  <div
                    class="MuiTypography-root MuiTypography-body2 css-hoiwr4-MuiTypography-root"
                  >
                    <div
                      class="MuiStack-root css-kdc3n8-MuiStack-root"
                    >
                      <span>
                        1
                      </span>
                      <div
                        class="MuiChip-root MuiChip-filled MuiChip-sizeMedium MuiChip-colorPrimary MuiChip-filledPrimary css-uy9ylj-MuiChip-root"
                      >
                        <span
                          class="MuiChip-label MuiChip-labelMedium css-6od3lo-MuiChip-label"
                        >
                          currentVersionChipLabel
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="MuiStack-root css-1xcvc1q-MuiStack-root"
              >
                <div
                  class="MuiBox-root css-iuqs4u"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body2 css-e784if-MuiTypography-root"
                  >
                    versionStatus
                  </p>
                </div>
                <div
                  class="MuiBox-root css-1rr4qq7"
                >
                  <div
                    class="MuiTypography-root MuiTypography-body2 css-hoiwr4-MuiTypography-root"
                  >
                    <div
                      class="MuiChip-root MuiChip-filled MuiChip-sizeMedium MuiChip-colorSuccess MuiChip-filledSuccess css-1dxej50-MuiChip-root"
                    >
                      <span
                        class="MuiChip-label MuiChip-labelMedium css-6od3lo-MuiChip-label"
                      >
                        status.eservice.PUBLISHED
                      </span>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="MuiStack-root css-1xcvc1q-MuiStack-root"
              >
                <div
                  class="MuiBox-root css-iuqs4u"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body2 css-e784if-MuiTypography-root"
                  >
                    description
                  </p>
                </div>
                <div
                  class="MuiBox-root css-1rr4qq7"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body2 css-hoiwr4-MuiTypography-root"
                  >
                    Lorem
                  </p>
                </div>
              </div>
              <div
                class="MuiStack-root css-1xcvc1q-MuiStack-root"
              >
                <div
                  class="MuiBox-root css-iuqs4u"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body2 css-e784if-MuiTypography-root"
                  >
                    audience
                  </p>
                  <hr
                    class="MuiDivider-root MuiDivider-fullWidth css-159wgzx-MuiDivider-root"
                  />
                  <span
                    class="MuiTypography-root MuiTypography-caption css-g171c3-MuiTypography-root"
                  >
                    audienceDescription
                  </span>
                </div>
                <div
                  class="MuiBox-root css-1rr4qq7"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body2 css-hoiwr4-MuiTypography-root"
                  >
                    Lorem
                  </p>
                </div>
              </div>
              <div
                class="MuiStack-root css-1xcvc1q-MuiStack-root"
              >
                <div
                  class="MuiBox-root css-iuqs4u"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body2 css-e784if-MuiTypography-root"
                  >
                    voucherLifespan
                  </p>
                </div>
                <div
                  class="MuiBox-root css-1rr4qq7"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body2 css-hoiwr4-MuiTypography-root"
                  >
                    1 time.minute
                  </p>
                </div>
              </div>
              <div
                class="MuiStack-root css-1xcvc1q-MuiStack-root"
              >
                <div
                  class="MuiBox-root css-iuqs4u"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body2 css-e784if-MuiTypography-root"
                  >
                    dailyCallsPerConsumer
                  </p>
                </div>
                <div
                  class="MuiBox-root css-1rr4qq7"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body2 css-hoiwr4-MuiTypography-root"
                  >
                    1 callsPerDay
                  </p>
                </div>
              </div>
              <div
                class="MuiStack-root css-1xcvc1q-MuiStack-root"
              >
                <div
                  class="MuiBox-root css-iuqs4u"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body2 css-e784if-MuiTypography-root"
                  >
                    dailyCallsTotal
                  </p>
                </div>
                <div
                  class="MuiBox-root css-1rr4qq7"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body2 css-hoiwr4-MuiTypography-root"
                  >
                    1 callsPerDay
                  </p>
                </div>
              </div>
              <div
                class="MuiStack-root css-1xcvc1q-MuiStack-root"
              >
                <div
                  class="MuiBox-root css-iuqs4u"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body2 css-e784if-MuiTypography-root"
                  >
                    agreementApprovalPolicy.label
                  </p>
                </div>
                <div
                  class="MuiBox-root css-1rr4qq7"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body2 css-hoiwr4-MuiTypography-root"
                  >
                    agreementApprovalPolicy.MANUAL
                  </p>
                </div>
              </div>
            </div>
          </div>
        </section>
        <section
          class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-u52cu0-MuiPaper-root"
        >
          <div
            class="MuiStack-root css-jfdv4h-MuiStack-root"
          >
            <div
              class="MuiStack-root css-3y1137-MuiStack-root"
            >
              <h2
                class="MuiTypography-root MuiTypography-overline css-b3fch5-MuiTypography-root"
              >
                Download
              </h2>
            </div>
          </div>
          <div
            class="MuiBox-root css-1yuhvjn"
          >
            <ul
              class="MuiStack-root css-13r94rd-MuiStack-root"
            >
              <li
                class="MuiBox-root css-0"
              >
                <button
                  class="MuiTypography-root MuiTypography-body2 MuiLink-root MuiLink-underlineHover MuiLink-button css-ird2g-MuiTypography-root-MuiLink-root"
                >
                  <span
                    class="MuiStack-root css-ae0xht-MuiStack-root"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                      data-testid="AttachFileIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M16.5 6v11.5c0 2.21-1.79 4-4 4s-4-1.79-4-4V5c0-1.38 1.12-2.5 2.5-2.5s2.5 1.12 2.5 2.5v10.5c0 .55-.45 1-1 1s-1-.45-1-1V6H10v9.5c0 1.38 1.12 2.5 2.5 2.5s2.5-1.12 2.5-2.5V5c0-2.21-1.79-4-4-4S7 2.79 7 5v12.5c0 3.04 2.46 5.5 5.5 5.5s5.5-2.46 5.5-5.5V6h-1.5z"
                      />
                    </svg>
                     
                    <span>
                      Specifica API
                    </span>
                     
                  </span>
                </button>
              </li>
            </ul>
          </div>
        </section>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-5 css-k3f0g4-MuiGrid-root"
      >
        <section
          class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-u52cu0-MuiPaper-root"
        >
          <div
            class="MuiStack-root css-jfdv4h-MuiStack-root"
          >
            <div
              class="MuiStack-root css-3y1137-MuiStack-root"
            >
              <h2
                class="MuiTypography-root MuiTypography-h6 css-2ulfj5-MuiTypography-root"
              >
                title
              </h2>
            </div>
            <p
              class="MuiTypography-root MuiTypography-body2 css-r40f8v-MuiTypography-root"
            >
              content
            </p>
          </div>
          <div
            class="MuiBox-root css-1yuhvjn"
          >
            <div
              class="MuiStack-root css-jfdv4h-MuiStack-root"
            >
              <div
                class="MuiStack-root css-nen11g-MuiStack-root"
              >
                <div
                  class="MuiBox-root css-1pdb85g"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body2 css-e784if-MuiTypography-root"
                  >
                    eserviceId
                  </p>
                </div>
                <div
                  class="MuiBox-root css-1rr4qq7"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body2 css-hoiwr4-MuiTypography-root"
                  >
                    03d0c725-47e5-4ec5-8ecd-1a1f3ce45d29
                    <button
                      aria-label="Copia"
                      class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-vqczhe-MuiButtonBase-root-MuiIconButton-root"
                      data-mui-internal-clone-element="true"
                      role="button"
                      tabindex="0"
                      type="button"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-ptiqhd-MuiSvgIcon-root"
                        data-testid="ContentCopyIcon"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M16 1H4c-1.1 0-2 .9-2 2v14h2V3h12V1zm3 4H8c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h11c1.1 0 2-.9 2-2V7c0-1.1-.9-2-2-2zm0 16H8V7h11v14z"
                        />
                      </svg>
                      <span
                        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                      />
                    </button>
                  </p>
                </div>
              </div>
              <div
                class="MuiStack-root css-nen11g-MuiStack-root"
              >
                <div
                  class="MuiBox-root css-1pdb85g"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body2 css-e784if-MuiTypography-root"
                  >
                    descriptorId
                  </p>
                </div>
                <div
                  class="MuiBox-root css-1rr4qq7"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body2 css-hoiwr4-MuiTypography-root"
                  >
                    ec94e366-cbb2-4203-ac07-95acf5289a31
                    <button
                      aria-label="Copia"
                      class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-vqczhe-MuiButtonBase-root-MuiIconButton-root"
                      data-mui-internal-clone-element="true"
                      role="button"
                      tabindex="0"
                      type="button"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-ptiqhd-MuiSvgIcon-root"
                        data-testid="ContentCopyIcon"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M16 1H4c-1.1 0-2 .9-2 2v14h2V3h12V1zm3 4H8c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h11c1.1 0 2-.9 2-2V7c0-1.1-.9-2-2-2zm0 16H8V7h11v14z"
                        />
                      </svg>
                      <span
                        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                      />
                    </button>
                  </p>
                </div>
              </div>
              <div
                class="MuiStack-root css-nen11g-MuiStack-root"
              >
                <div
                  class="MuiBox-root css-1pdb85g"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body2 css-e784if-MuiTypography-root"
                  >
                    providerId
                  </p>
                </div>
                <div
                  class="MuiBox-root css-1rr4qq7"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body2 css-hoiwr4-MuiTypography-root"
                  >
                    ad474d35-7939-4bee-bde9-4e469cca1030
                    <button
                      aria-label="Copia"
                      class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-vqczhe-MuiButtonBase-root-MuiIconButton-root"
                      data-mui-internal-clone-element="true"
                      role="button"
                      tabindex="0"
                      type="button"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-ptiqhd-MuiSvgIcon-root"
                        data-testid="ContentCopyIcon"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M16 1H4c-1.1 0-2 .9-2 2v14h2V3h12V1zm3 4H8c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h11c1.1 0 2-.9 2-2V7c0-1.1-.9-2-2-2zm0 16H8V7h11v14z"
                        />
                      </svg>
                      <span
                        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                      />
                    </button>
                  </p>
                </div>
              </div>
            </div>
          </div>
        </section>
      </div>
    </div>
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-u52cu0-MuiPaper-root"
    >
      <div
        class="MuiStack-root css-jfdv4h-MuiStack-root"
      >
        <div
          class="MuiStack-root css-3y1137-MuiStack-root"
        />
      </div>
      <div
        class="MuiBox-root css-zv7ju9"
      >
        <section
          class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-1od456z-MuiPaper-root"
        >
          <div
            class="MuiStack-root css-jfdv4h-MuiStack-root"
          >
            <div
              class="MuiStack-root css-3y1137-MuiStack-root"
            >
              <h3
                class="MuiTypography-root MuiTypography-sidenav css-37jdci-MuiTypography-root"
              >
                certified.label
              </h3>
            </div>
            <p
              class="MuiTypography-root MuiTypography-body2 css-r40f8v-MuiTypography-root"
            >
              certified.description
            </p>
          </div>
          <div
            class="MuiBox-root css-1yuhvjn"
          >
            <div
              class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-8yd19h-MuiPaper-root-MuiCard-root"
            >
              <div
                class="MuiCardHeader-root css-9zb0zf-MuiCardHeader-root"
              >
                <div
                  class="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
                >
                  <span
                    class="MuiTypography-root MuiTypography-body1 MuiCardHeader-title css-153kzzj-MuiTypography-root"
                  >
                    noAttributesRequiredAlert.consumer
                  </span>
                </div>
              </div>
            </div>
          </div>
        </section>
        <hr
          class="MuiDivider-root MuiDivider-fullWidth css-1iknwlx-MuiDivider-root"
        />
        <section
          class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-1od456z-MuiPaper-root"
        >
          <div
            class="MuiStack-root css-jfdv4h-MuiStack-root"
          >
            <div
              class="MuiStack-root css-3y1137-MuiStack-root"
            >
              <h3
                class="MuiTypography-root MuiTypography-sidenav css-37jdci-MuiTypography-root"
              >
                verified.label
              </h3>
            </div>
            <p
              class="MuiTypography-root MuiTypography-body2 css-r40f8v-MuiTypography-root"
            >
              verified.description
            </p>
          </div>
          <div
            class="MuiBox-root css-1yuhvjn"
          >
            <div
              class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-8yd19h-MuiPaper-root-MuiCard-root"
            >
              <div
                class="MuiCardHeader-root css-9zb0zf-MuiCardHeader-root"
              >
                <div
                  class="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
                >
                  <span
                    class="MuiTypography-root MuiTypography-body1 MuiCardHeader-title css-153kzzj-MuiTypography-root"
                  >
                    noAttributesRequiredAlert.consumer
                  </span>
                </div>
              </div>
            </div>
          </div>
        </section>
        <hr
          class="MuiDivider-root MuiDivider-fullWidth css-1iknwlx-MuiDivider-root"
        />
        <section
          class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-1od456z-MuiPaper-root"
        >
          <div
            class="MuiStack-root css-jfdv4h-MuiStack-root"
          >
            <div
              class="MuiStack-root css-3y1137-MuiStack-root"
            >
              <h3
                class="MuiTypography-root MuiTypography-sidenav css-37jdci-MuiTypography-root"
              >
                declared.label
              </h3>
            </div>
            <p
              class="MuiTypography-root MuiTypography-body2 css-r40f8v-MuiTypography-root"
            >
              declared.description
            </p>
          </div>
          <div
            class="MuiBox-root css-1yuhvjn"
          >
            <div
              class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-8yd19h-MuiPaper-root-MuiCard-root"
            >
              <div
                class="MuiCardHeader-root css-9zb0zf-MuiCardHeader-root"
              >
                <div
                  class="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
                >
                  <span
                    class="MuiTypography-root MuiTypography-body1 MuiCardHeader-title css-153kzzj-MuiTypography-root"
                  >
                    noAttributesRequiredAlert.consumer
                  </span>
                </div>
              </div>
            </div>
          </div>
        </section>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-mhc70k-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6 css-1osj8n2-MuiGrid-root"
      />
    </div>
  </div>
</body>
`;

exports[`EServiceDetails > should match the snapshot (provider) 1`] = `
<body>
  <div />
</body>
`;

exports[`EServiceDetailsSkeleton > should match the snapshot (consumer) 1`] = `
<body>
  <div>
    <div
      class="MuiStack-root css-11zvfn9-MuiStack-root"
    >
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-mhc70k-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-7 css-uqwprf-MuiGrid-root"
        >
          <div
            class="MuiStack-root css-1sazv7p-MuiStack-root"
          >
            <span
              class="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-pulse css-4i8vzz-MuiSkeleton-root"
              style="height: 102px;"
            />
            <span
              class="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-pulse css-4i8vzz-MuiSkeleton-root"
              style="height: 471px;"
            />
            <span
              class="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-pulse css-4i8vzz-MuiSkeleton-root"
              style="height: 150px;"
            />
          </div>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-5 css-k3f0g4-MuiGrid-root"
        >
          <div
            class="MuiStack-root css-1sazv7p-MuiStack-root"
          >
            <span
              class="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-pulse css-4i8vzz-MuiSkeleton-root"
              style="height: 300px;"
            />
            <span
              class="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-pulse css-4i8vzz-MuiSkeleton-root"
              style="height: 337px;"
            />
          </div>
        </div>
      </div>
      <span
        class="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-pulse css-4i8vzz-MuiSkeleton-root"
        style="height: 320px;"
      />
      <span
        class="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-pulse css-4i8vzz-MuiSkeleton-root"
        style="height: 320px;"
      />
      <span
        class="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-pulse css-4i8vzz-MuiSkeleton-root"
        style="height: 320px;"
      />
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-mhc70k-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6 css-1osj8n2-MuiGrid-root"
        >
          <span
            class="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-pulse css-4i8vzz-MuiSkeleton-root"
            style="height: 150px;"
          />
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`EServiceDetailsSkeleton > should match the snapshot (provider) 1`] = `
<body>
  <div>
    <div
      class="MuiStack-root css-11zvfn9-MuiStack-root"
    >
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-mhc70k-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-7 css-uqwprf-MuiGrid-root"
        >
          <div
            class="MuiStack-root css-1sazv7p-MuiStack-root"
          >
            <span
              class="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-pulse css-4i8vzz-MuiSkeleton-root"
              style="height: 102px;"
            />
            <span
              class="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-pulse css-4i8vzz-MuiSkeleton-root"
              style="height: 471px;"
            />
            <span
              class="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-pulse css-4i8vzz-MuiSkeleton-root"
              style="height: 150px;"
            />
          </div>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-5 css-k3f0g4-MuiGrid-root"
        >
          <div
            class="MuiStack-root css-1sazv7p-MuiStack-root"
          >
            <span
              class="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-pulse css-4i8vzz-MuiSkeleton-root"
              style="height: 194px;"
            />
          </div>
        </div>
      </div>
      <span
        class="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-pulse css-4i8vzz-MuiSkeleton-root"
        style="height: 320px;"
      />
      <span
        class="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-pulse css-4i8vzz-MuiSkeleton-root"
        style="height: 320px;"
      />
      <span
        class="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-pulse css-4i8vzz-MuiSkeleton-root"
        style="height: 320px;"
      />
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-mhc70k-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6 css-1osj8n2-MuiGrid-root"
        >
          <span
            class="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-pulse css-4i8vzz-MuiSkeleton-root"
            style="height: 150px;"
          />
        </div>
      </div>
    </div>
  </div>
</body>
`;
